<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimage"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".StartActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="439dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        tools:ignore="MissingConstraints"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        app:layout_constraintBottom_toTopOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/menuButton"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:background="@color/colorAccent"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="32dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/prevOrder"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:background="@color/colorAccent"
            android:text="@string/prev"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="32dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorAccent"
        android:text="@string/logout"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_pager" />

</android.support.constraint.ConstraintLayout>